@@ -1,3 +1,8 @@
+Wed Apr  9 14:07:18 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* HTMLparser.c include/libxml/HTMLparser.h:  exported
+	  htmlCreateMemoryParserCtxt() it was static
+
 Wed Apr  9 13:21:48 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* xmlschemas.c xmlschemastypes.c include/libxml/xmlschemas.h:
